# fmp-mcp-server

./: .env.template  .gitignore  Dockerfile  README.md  claude_human_transcript.md  claude_human_transcription_test_driven_stable_api.md  codecov.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  summary.md  summary_20250414.md  test_plan.md
.github/workflows/: acceptance-tests.yml  ci.yml  release.yml
src/: agent_chat_client.py  server.py
src/api/: client.py
src/prompts/: templates.py
src/resources/: __init__.py  company.py  market.py
src/tools/: analysis.py  analyst.py  calendar.py  charts.py  commodities.py  company.py  crypto.py  etf.py  forex.py  indices.py  market.py  market_hours.py  market_performers.py  quote.py  search.py  statements.py  technical_indicators.py
tests/: acceptance_tests.py  conftest.py  test_analyst.py  test_api_client.py  test_calendar.py  test_charts.py  test_commodities.py  test_company.py  test_crypto.py  test_etf.py  test_forex.py  test_indices.py  test_market.py  test_market_hours.py  test_market_performers.py  test_prompts.py  test_quotes.py  test_resources.py  test_search.py  test_server.py  test_statements.py  test_technical_indicators.py  test_tools.py
