[project]
name = "fmp-mcp-server"
version = "0.1.0"
description = "Financial Modeling Prep MCP Server"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.5.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"